--- a/src/index.css
+++ b/src/index.css
@@ -539,7 +539,7 @@ img {
     text-align: center;
     overflow: hidden;
     scroll-snap-align: start;
-    background: url('/imgs/banner-bg.jpeg') no-repeat top center;
+    background: url('./imgs/banner-bg.jpeg') no-repeat top center;
     background-size: 100% 100vh;
 
     &::before,
