--- a/src/index.css
+++ b/src/index.css
@@ -397,6 +397,8 @@ img {
 .nav {
     background: var(--global-color-bg);
     color: var(--text-primary);
+    position: relative;
+    z-index: 999;
     /* border-bottom: 1px solid rgba(255,255,255,0.1); */
 }
 
@@ -503,8 +505,32 @@ img {
     align-items: center;
     font-size: 18px;
     justify-content: flex-end;
-
-    a {
+    li{
+        position: relative;
+        &:hover .elementskit-dropdown{
+            display: block;
+        }
+        &:has(ul){
+            a.nemu-title{
+                padding-right: 20px;
+                &::after{
+                    content: "";
+                    position: absolute;
+                    top: 32%;
+                    right: 0;
+                    -webkit-transform: translateY(-50%);
+                    transform: translateY(-50%);
+                    width: 6px;
+                    height: 6px;
+                    border-right: 1px solid var(--text-primary);
+                    border-bottom: 1px solid var(--text-primary);
+                    -webkit-transform: rotate(45deg);
+                    transform: rotate(45deg);
+                }
+            }
+        }
+    }
+    li>a.nemu-title {
         -webkit-transition: var(--transition);
         transition: var(--transition);
         box-sizing: border-box;
@@ -518,12 +544,48 @@ img {
             border-bottom: 4px solid var(--global-color-15378b7);
         }
     }
+    li:hover{
+        a.nemu-title {
+            
+                border-bottom: 4px solid var(--global-color-15378b7);
+            
+        }
+    }
 }
 
 
 /* Banner区域 */
 .banner-layer {
     position: relative;
+    overflow: hidden;
+    z-index: 1;
+}
+.elementskit-dropdown{
+    display: none;
+    box-shadow: 0 10px 30px 0 rgba(45, 45, 45, .2);
+    position: absolute;
+    width: 220px;
+    top: 100%;
+    left: 0;
+    margin-top: 10px;
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+    max-height: none;
+    z-index: 99;
+    color: var(--dark-bg-2);
+    background: var(--global-color-69918c5);
+    border:1px solid var(--global-color-69918c5);
+    a{
+        color: var(--dark-bg-2);
+        font-weight: normal;
+        display: block;
+        padding: 8px 15px;
+        border: none;
+        &:hover{
+            background-color: var(--global-color-15378b7);
+            color: #fff;
+        }
+    }
 }
 
 .banner {
@@ -572,6 +634,7 @@ img {
     object-fit: contain;
     margin-top: -11rem;
     z-index: 1;
+    pointer-events: none;
 }
 
 .banner-content {
@@ -598,6 +661,7 @@ img {
         letter-spacing: 2px;
         font-family: 'Arial Black', serif;
         transform: scaleY(1.2);
+        text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.33);
     }
 
     .banner-btn {
@@ -1467,32 +1531,6 @@ footer::before {
 }
 
 
-/* 响应式适配（兼容手机/平板） */
-@media (max-width: 768px) {
-    .nav-menu {
-        gap: 1rem;
-    }
-
-}
-
-@media (max-width: 480px) {
-    .nav-container {
-        -webkit-flex-direction: column;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .nav-menu {
-        -webkit-flex-wrap: wrap;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .banner-title {
-        font-size: 1.5rem;
-    }
-}
-
 .elementor-shape-top {
     text-align: center;
     position: absolute;
@@ -1621,14 +1659,25 @@ footer::before {
         height: 100%;
         z-index: 10;
         h2{
-            width: 230px;
+            padding-top: 0rem;
+            opacity: 1;
+            line-height: 1.4;
+            font-size: 34px;
+            text-align: left;
+             width: 230px;
+        }
+        h2[data-type="fade-up"]{
+           
             padding-top: 3rem;
             transition: all 0.3s ease;
             opacity: 0;
-            text-align: left;
-            line-height: 1.5;
-            font-size: 34px;
+            
+            
+           
         }
+    
+        
+        
         p{
             flex:1;
             font-size: 21px;
@@ -1880,12 +1929,7 @@ footer::before {
     justify-content: center;
     text-align: center;
     min-height: 250px;
-    .hover{
-        h2{
-            padding-top: 0rem;
-            opacity: 1;
-        }
-    }
+    
 }
 
 .card-capacity .centered {
