--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ body {
 
 .container {
     width: 90%;
-    max-width: 1300px;
+    max-width: 1520px;
     margin: 0 auto;
     padding: 0 15px;
     position: relative;
@@ -110,13 +110,13 @@ img {
 }
 
 .section-title {
-    font-size: 3.2rem;
+    font-size: 3.8rem;
     color: var(--text-primary);
     position: relative;
     padding-bottom: var(--spacing-sm);
     letter-spacing: 1px;
     line-height: 1.2;
-    padding-top: 3.8rem;
+    padding-top: 4.5rem;
 }
 
 /* .section-title::after {
@@ -491,7 +491,7 @@ img {
         right: 1rem;
         -webkit-transform: translateY(-50%);
         transform: translateY(-50%);
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         cursor: pointer;
     }
 }
@@ -729,7 +729,6 @@ img {
 /* 介绍区域 */
 .intro {
     background: var(--dark-2);
-    height: 1640px;
     &::before {
         content: " ";
         position: absolute;
@@ -743,9 +742,9 @@ img {
 }
 
 .intro-text {
-    max-width: 900px;
+    max-width: 950px;
     margin-bottom: 2rem;
-    font-size: 22px;
+    font-size: 23px;
     line-height: 1.6;
 }
 
@@ -1017,14 +1016,14 @@ img {
     overflow-x: auto;
     -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
+    border-radius: 10px;
 }
 
 .specs-header {
     position: relative;
     background: linear-gradient(90deg, var(--dark-2) 0%, rgba(33, 33, 33, 0.8) 100%);
     padding: 1.5rem 1rem;
-    border-radius: 8px 8px 0 0;
+    border-radius: 10px 10px 0 0;
     overflow: hidden;
 }
 
@@ -1618,11 +1617,11 @@ footer::before {
 .bento-container {
     background-color: #0d0e12;
     color: #fff;
-    min-height: 88vh;
+    min-height: 96vh;
     display: flex;
     justify-content: center;
     font-family: "Titillium Web", sans-serif;
-    padding-top: 3.5rem;
+    padding-top: 4.8rem;
 }
 
 .bento-grid {
@@ -1630,7 +1629,7 @@ footer::before {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto auto;
     gap: 20px;
-    max-width: 1300px;
+    max-width: 1520px;
     width: 100%;
     padding: 15px;
 }
@@ -1662,25 +1661,20 @@ footer::before {
             padding-top: 0rem;
             opacity: 1;
             line-height: 1.4;
-            font-size: 34px;
+            font-size: 36px;
             text-align: left;
-             width: 230px;
+             width: 240px;
         }
         h2[data-type="fade-up"]{
-           
             padding-top: 3rem;
             transition: all 0.3s ease;
             opacity: 0;
-            
-            
-           
         }
     
-        
-        
         p{
             flex:1;
             font-size: 21px;
+            padding-left: 1rem;
             text-align: left;
         }
     }
@@ -1703,22 +1697,24 @@ footer::before {
         width: 100%;
         display: flex;
         h2{
-            width: 180px;
+            width: 230px;
             padding-top: .6rem;
             line-height: 1.4;
-            font-size: 34px;
+            font-size: 36px;
         }
         .card-stats{
             flex: 1;
             position: relative;
-            padding-left: 2.5rem;
+            padding-left: .5rem;
             .desc{
-                transform: translateY(20px);
+                transform: translate3d(20px, 40px, 0);
+                z-index: 11;
+                position: relative;
             }
             .stat-row{
                 position: relative;
                 margin-top: 4rem;
-                font-size: 1rem;
+                font-size: 1.2rem;
                 z-index: 11;
                 &::after {
                     content: '';
@@ -1830,7 +1826,7 @@ footer::before {
     justify-content: space-between;
     padding: 10px 0;
     font-size: 0.9rem;
-    width: 200px;
+    width: 240px;
 }
 
 .stat-label {
@@ -1846,12 +1842,16 @@ footer::before {
     top: 50%;
     transform: translateY(-50%);
     right: 0px;
-    width: 110px;
-    height: 200px;
+    width: 140px;
+    height: 240px;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 24px;
+    border-radius: 34px;
     overflow: hidden;
-    background: rgba(255, 255, 255, 0.1);
+    /* background: rgba(255, 255, 255, 0.1); */
+    background-image: url('../imgs/ai.png');
+    background-size: 623px auto;
+    background-repeat: no-repeat;
+    background-position: -484px -213px;
     z-index: 3;
     
     .graphic-water {
@@ -1860,7 +1860,7 @@ footer::before {
         left: 0;
         width: 100%;
         height: 15%;
-        background: rgba(0, 191, 255,0.5);
+        background: rgba(0, 191, 255,0.6);
         /* box-shadow: 0 0 10px #00bfff; */
     }
 }
@@ -1967,7 +1967,7 @@ footer::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: cover;
+    background-size: 140%;
     background-position: center;
     opacity: 0.5;
     mask-image: linear-gradient(to right, black 40%, transparent);
